# 20260503-analyst-agent

./: .gitignore  .mcp.json  CLAUDE.md  README.md  analysis.ipynb  analysis.py  main.py  pyproject.toml
.claude/: README.md  hook-save-reply.py  hook-save-request.py  settings.json
.claude/agents/: junior-analyst-supercharger.md  supply_chain_analyst.md
.data/bigquery-metadata-dump/bigquery-public-data/thelook_ecommerce/: distribution_centers.json  events.json  inventory_items.json  order_items.json  orders.json  products.json  thelook_ecommerce-table.json  users.json
scripts/: save-bigquery-metadata.py
